# LemonBot

./: main.py  pyproject.toml
cogs/: help.py  info.py  misc.py  mod.py  music.py
data/: virus.txt
data/anims/: flip.txt  injektor.txt
ext/: embedtobox.py
